--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Math Game For Kids",
-    "slug": "mgfk",
+    "name": "Calcular IMC",
+    "slug": "calcularimc",
     "privacy": "public",
     "sdkVersion": "34.0.0",
     "platforms": [
