App.json Update

--- a/app.json
+++ b/app.json
@@ -24,7 +24,13 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier": "com.targetcode.calcularimc",
+      "buildNumber": "1.0.0",
       "supportsTablet": true
+    },
+    "android": {
+      "package": "com.targetcode.calcularimc",
+      "versionCode": 1
     }
   }
 }
